usr/src/cmd/cmd-crypto/tpmadm/main.c
@@ -195,7 +195,7 @@ set_policy_options(TSS_HPOLICY hPolicy, TSS_FLAG mode, char *prompt,
 		unicode_prompt = Trspi_Native_To_UNICODE((BYTE *)prompt, &len);
 		ret = Tspi_SetAttribData(hPolicy,
 		    TSS_TSPATTRIB_POLICY_POPUPSTRING,
-		    NULL, len, unicode_prompt);
+		    0, len, unicode_prompt);
 		if (ret) {
 			print_error(ret, gettext("Set policy prompt"));
 			return (ERR_FAIL);
